--- a/package.json
+++ b/package.json
@@ -2,41 +2,78 @@
     "name": "onslow-college-dit-extensions",
     "displayName": "Onslow College DIT Extension Pack",
     "description": "Extensions needed for senior Onslow College Digital Technologies courses",
-    "version": "1.1.0",
+    "version": "2.0.0",
     "publisher": "OnslowCollege",
     "repository": "https://github.com/MatuaDoc/onslow-college-dit-extension-pack",
     "engines": {
-        "vscode": "^1.68.0"
+        "vscode": "^1.79.0"
     },
     "categories": [
-        "Extension Packs"
+        "Extension Packs", "Education"
+    ],
+    "keywords": [
+        "Onslow", "OC", "DIT"
     ],
     "extensionPack": [
         "eamodio.gitlens",
-        "github.classroom",
-        "GitHub.github-vscode-theme",
         "GitHub.remotehub",
         "GitHub.vscode-pull-request-github",
+
         "ms-python.python",
         "ms-python.vscode-pylance",
-        "ms-vscode.live-server",
-        "ms-vscode.remote-repositories",
-        "ms-vsliveshare.vsliveshare",
-        "oderwat.indent-rainbow",
-        "OnslowCollege.onslow-college-dit-extensions",
-        "pranaygp.vscode-css-peek",
+        "ms-python.black-formatter",
+        "ms-python.mypy-type-checker",
         "slightc.pip-manager",
+
         "sswg.swift-lang",
-        "usernamehw.errorlens",
         "vadimcn.vscode-lldb",
-        "yzhang.markdown-all-in-one",
+
+        "ecmel.vscode-html-css",
+        "christian-kohler.path-intellisense",
+        "pranaygp.vscode-css-peek",
+        "ms-vscode.live-server",
+        
+        "oderwat.indent-rainbow",
+        "usernamehw.errorlens",
+        "aaron-bond.better-comments",
         "formulahendry.auto-close-tag",
         "formulahendry.auto-complete-tag",
         "formulahendry.auto-rename-tag",
-        "aaron-bond.better-comments",
+        "yzhang.markdown-all-in-one",
+        "bierner.github-markdown-preview",
+        "bierner.markdown-preview-github-styles",
+        "bierner.markdown-checkbox",
+        "bierner.markdown-emoji",
+        "bierner.markdown-footnotes",
+        "bierner.markdown-yaml-preamble",
+        "DavidAnson.vscode-markdownlint",
+        
         "hediet.vscode-drawio",
-        "ecmel.vscode-html-css",
-        "christian-kohler.path-intellisense",
-        "esbenp.prettier-vscode"
-    ]
+    ],
+    "contributes": {
+        "configurationDefaults": {
+            "gitlens.showWhatsNewAfterUpgrades": false,
+            "gitlens.showWelcomeOnInstall": false,
+            "python.linting.enabled": true,
+            "python.linting.pycodestyleEnabled": true,
+            "python.linting.pydocstyleEnabled": true,
+            "python.linting.pydocstyleArgs": [
+                "--convention=pep257"
+            ],
+            "python.linting.mypyEnabled": true,
+            "python.linting.mypyArgs": [
+                "--follow-imports=silent",
+                "--ignore-missing-imports",
+                "--show-column-numbers",
+                "--disallow-untyped-defs",
+                "--no-pretty",
+                "--strict"
+            ],
+            "workbench.colorTheme": "Default Light Modern",
+            "editor.wordWrap": "on",
+            "editor.fontSize": 16,
+            "editor.formatOnSave": true,
+            "editor.formatOnSaveMode": "modificationsIfAvailable",
+            "editor.formatOnType": true
+    }
 }
