--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "description": "Extensions needed for senior Onslow College Digital Technologies courses",
     "version": "2.0.0",
     "publisher": "OnslowCollege",
+    "icon": "images/onslow.png",
     "repository": "https://github.com/MatuaDoc/onslow-college-dit-extension-pack",
     "engines": {
         "vscode": "^1.79.0"
@@ -24,22 +25,24 @@
         "sswg.swift-lang",
         "vadimcn.vscode-lldb",
         "ecmel.vscode-html-css",
+        "bierner.lit-html",
         "christian-kohler.path-intellisense",
         "pranaygp.vscode-css-peek",
+        "bierner.color-info",
+        "formulahendry.auto-close-tag",
+        "formulahendry.auto-complete-tag",
+        "formulahendry.auto-rename-tag",
         "ms-vscode.live-server",
         "oderwat.indent-rainbow",
         "usernamehw.errorlens",
         "aaron-bond.better-comments",
-        "formulahendry.auto-close-tag",
-        "formulahendry.auto-complete-tag",
-        "formulahendry.auto-rename-tag",
+        "bierner.docs-view",
         "yzhang.markdown-all-in-one",
         "bierner.github-markdown-preview",
         "bierner.markdown-preview-github-styles",
         "bierner.markdown-checkbox",
         "bierner.markdown-emoji",
         "bierner.markdown-footnotes",
-        "bierner.markdown-yaml-preamble",
         "DavidAnson.vscode-markdownlint",
         "hediet.vscode-drawio"
     ],
