--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-    "name": "onslow-college-dit-extensions",
-    "displayName": "Onslow College DIT Extension Pack",
+    "name": "onslow-college-extension-pack",
+    "displayName": "Onslow College Extension Pack",
     "description": "Extensions needed for senior Onslow College Digital Technologies courses",
-    "version": "2.0.1",
+    "version": "1.0.0",
     "publisher": "OnslowCollege",
     "icon": "img/onslow.png",
-    "repository": "https://github.com/MatuaDoc/onslow-college-dit-extension-pack",
+    "repository": "https://github.com/OnslowCollege/ExtensionPack",
     "engines": {
         "vscode": "^1.79.0"
     },
@@ -21,6 +21,7 @@
         "GitHub.vscode-pull-request-github",
         "ms-python.python",
         "ms-python.vscode-pylance",
+        "ms-python.mypy-type-checker",
         "slightc.pip-manager",
         "sswg.swift-lang",
         "vadimcn.vscode-lldb",
@@ -58,14 +59,14 @@
             ],
             "python.linting.mypyEnabled": true,
             "python.linting.mypyArgs": [
+                "--strict",
                 "--follow-imports=silent",
                 "--ignore-missing-imports",
                 "--show-column-numbers",
-                "--disallow-untyped-defs",
-                "--no-pretty",
-                "--strict"
+                "--pretty"
             ],
             "workbench.colorTheme": "Default Light Modern",
+            "debug.console.fontSize": 16,
             "editor.wordWrap": "on",
             "editor.fontSize": 16,
             "editor.formatOnSave": true,
